fixing article bugs on mobile devices

--- a/scss/02-partials/_article-feed.scss
+++ b/scss/02-partials/_article-feed.scss
@@ -41,8 +41,10 @@
     .article-return {
         padding-left: 0;
         padding-top: 32px;
-        margin-left: $container-padding-x;
         display: inline-block;
+        @include media-breakpoint-up(md) {
+            margin-left: $container-padding-x;
+        }
     }
 
     .article-return + .article-title {
